--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="latitude">широта</string>
     <string name="longitude">долгота</string>
     <string name="delete_mark">Удалить метку</string>
+    <string name="save">Save</string>
+    <string name="action_sfve">Сохранить</string>
 </resources>
